added icons, cleaned up manifest.json. This is now version 0.1.

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,25 @@
 {
     "name": ".hiv",
-    "version": "1.0",
+    "version": "0.1",
+    "manifest_version": 2,
+    
     "description": "Prepare your browser for the era of .hiv!",
+    "icons": {
+        "16": "dothiv16.png",
+        "48": "dothiv48.png",
+        "128": "dothiv128.png"                
+    },
+    
     "permissions": [
         "bookmarks",
         "http://hiv.enit.biz/"
     ],
+    
     "browser_action": {
-            "default_title": ".hiv",
-            "default_icon": "ribbon.png",
-            "default_popup": "popup.html"
+        "default_title": ".hiv",
+        "default_icon": "ribbon.png",
+        "default_popup": "popup.html"
     },
-    "manifest_version": 2,
+    
     "content_security_policy": "script-src 'self' 'unsafe-eval' https://ajax.googleapis.com; object-src 'self' https://hiv.enit.biz"
 }
